[package]
name = "servus"
description = "A dead simple application to serve files and directories over HTTP."
authors = ["Ringo Hoffmann <contact@zekro.de>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/shellshape/servus"
homepage = "https://github.com/shellshape/servus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
actix-web = "4"
actix-cors = "0.6.2"
actix-files = "0.6.2"
config = "0.13.2"
serde = "1.0.147"
directories = "4.0.1"
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
local-ip-address = "0.4.2"
handlebars = "4.3.5"
rust-s3 = { version = "0.32.3", default-features = false, features = ["tokio-rustls-tls", "fail-on-err"] }
