[package]
name = "servus"
description = "A dead simple application to serve files and directories over HTTP."
authors = ["Ringo Hoffmann <contact@zekro.de>"]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/shellshape/servus"
homepage = "https://github.com/shellshape/servus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
env_logger = "0.11.8"
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6.6"
config = "0.15"
serde = "1.0.219"
directories = "6"
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
local-ip-address = "0.6"
handlebars = "6"
rust-s3 = { version = "0.35.1", default-features = false, features = [
  "tokio-rustls-tls",
  "fail-on-err",
] }
open = "5.3.2"
